mizer 0.5
-----------
* Allow for size- and species-dependent background death.
* Add initial_n and initial_n_pp slots to mizer params.
* project() now shows a progress bar while simulation is running.
* Now checking that effort times are increasing.
* Corrections in the documentation.
* Fix bugs in how the start time of a simulation was handled.
* Improvements to the vignette.
* Fix potential problems with negative numbers due to numerical errors.
* Fix a bug in the divisibility checks.
* Add a test of the numeric solution against an analytic solution.


mizer 0.4
-----------
* Improvements made to the speed by evaluating convolution sums via fft,
  removing the bottlenecks in getPhiPrey() and getPredRate().
* Using C++ for the inner loop in the project method for extra speed.
* Minor corrections to vignette and documentation to bring them into alignment
  and to document the new home on github and new maintainers.


mizer 0.3
-----------

* Improvements made to the speed of the simulations. Remaining bottle necks are the sweep statements in getPhiPrey() and getPredRate().
* Moved tests to new suggested folder.
* Minor changes to documentation to pass new check requirements.

mizer 0.2
-----------

* Release to coincide with the submission of the MEE paper. No major changes. Just minor bug fixes.


mizer 0.1
-----------

* Beta release - just about works but still some gremlins to sort out.
  There are a number of features I'd like to add in the coming relases.